# ioc_extractor

./: .gitattributes  .gitignore  README.md  ioc_extractor.py  ioc_whitelist.txt  pyproject.toml
utils/: __init__.py  console.py  logger.py  regex_helper.py  tlds.txt
