[project]
name = "ioc-extractor"
version = "0.1.1"
description = "Extract IOCs from 'text' type files"
authors = [{ name = "Mitch Haddadi", email = "12067255+dfirsec@users.noreply.github.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "rich",
    "chardet",
    "requests",
    "tqdm",
    "pypdf",
]

[tool.hatch.build.targets.sdist]
include = ["ioc_extractor"]

[tool.hatch.build.targets.wheel]
include = ["ioc_extractor"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
